--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
                                 srcset="
                                     ./images/desktop/studio/team/desk_igor_270.jpg 270w,
                                     ./images/desktop/studio/team/desk_igor_540.jpg 540w,
-                                    ./images/desktop/studio/team/desk_igor_810.jpg 810w,
-                                    " 
-                                media="(min-width:1200px)" 
+                                    ./images/desktop/studio/team/desk_igor_810.jpg 810w
+                                    "
+                                media="(min-width:1200px)"
                                 sizes="25vw">
                             <source 
                                 srcset="
                                     ./images/tablet/studio/team/tab_igor_354.jpg 354w,
                                     ./images/tablet/studio/team/tab_igor_708.jpg 708w,
-                                    ./images/tablet/studio/team/tab_igor_1062.jpg 1062w,
+                                    ./images/tablet/studio/team/tab_igor_1062.jpg 1062w
                                     " 
                                 media="(min-width:768px)" 
                                 sizes="45vw"
@@ -252,7 +252,7 @@
                                 srcset="
                                     ./images/desktop/studio/team/desk_olga_270.jpg 270w,
                                     ./images/desktop/studio/team/desk_olga_540.jpg 540w,
-                                    ./images/desktop/studio/team/desk_olga_810.jpg 810w,
+                                    ./images/desktop/studio/team/desk_olga_810.jpg 810w
                                     " 
                                 media="(min-width:1200px)" 
                                 sizes="25vw">
@@ -260,7 +260,7 @@
                                 srcset="
                                     ./images/tablet/studio/team/tab_olga_354.jpg 354w,
                                     ./images/tablet/studio/team/tab_olga_708.jpg 708w,
-                                    ./images/tablet/studio/team/tab_olga_1062.jpg 1062w,
+                                    ./images/tablet/studio/team/tab_olga_1062.jpg 1062w
                                     " 
                                 media="(min-width:768px)"
                                 sizes="45vw">
@@ -315,7 +315,7 @@
                                 srcset="
                                     ./images/desktop/studio/team/desk_nukolay_270.jpg 270w,
                                     ./images/desktop/studio/team/desk_nukolay_540.jpg 540w,
-                                    ./images/desktop/studio/team/desk_nukolay_810.jpg 810w,
+                                    ./images/desktop/studio/team/desk_nukolay_810.jpg 810w
                                     " 
                                 media="(min-width:1200px)"
                                 sizes="25vw">
@@ -323,7 +323,7 @@
                                 srcset="
                                     ./images/tablet/studio/team/tab_nukolay_354.jpg 354w,
                                     ./images/tablet/studio/team/tab_nukolay_708.jpg 708w,
-                                    ./images/tablet/studio/team/tab_nukolay_1062.jpg 1062w,
+                                    ./images/tablet/studio/team/tab_nukolay_1062.jpg 1062w
                                     " 
                                 media="(min-width:768px)" 
                                 sizes="45vw">
@@ -378,7 +378,7 @@
                                 srcset="
                                     ./images/desktop/studio/team/desk_muhail_270.jpg 270w,
                                     ./images/desktop/studio/team/desk_muhail_540.jpg 540w,
-                                    ./images/desktop/studio/team/desk_muhail_810.jpg 810w,
+                                    ./images/desktop/studio/team/desk_muhail_810.jpg 810w
                                     " 
                                 media="(min-width:1200px)"
                                 sizes="25vw">
@@ -386,7 +386,7 @@
                                 srcset="
                                     ./images/tablet/studio/team/tab_muhail_354.jpg 354w,
                                     ./images/tablet/studio/team/tab_muhail_708.jpg 708w,
-                                    ./images/tablet/studio/team/tab_muhail_1062.jpg 1062w,
+                                    ./images/tablet/studio/team/tab_muhail_1062.jpg 1062w
                                     " 
                                 media="(min-width:768px)" 
                                 sizes="45vw">
