--- a/portfolio.html
+++ b/portfolio.html
@@ -516,7 +516,12 @@
                     <input type="email" placeholder="Email" class="footer-form__input">
                 </label>
                 <button type="submit" class="footer-form__btn">Подписаться
-                    <span class="footer-form__icon"></span></button>
+                    <span>
+                        <svg class="footer-form__icon">
+                            <use href="./images/icons/icons.svg#icon-send"></use>
+                        </svg>
+                    </span>
+                </button>
             </form>
         </div>
     </footer>
