--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </header>
     <main>
-        <section class="hero hero--bg" style="background-image: url(./images/desktop/studio/hero/desk_hero_1600.jpeg);">
+        <section class="hero hero--bg" >
             <div class="conteiner">
                 <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
