--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <li class="navigation__item"><a href="" class="pasiv-link navigation__link">Контакты</a></li>
                             </ul>
                         </nav>
-                        <div>
+                        <div class="contacts">
                             <ul class="contacts__list">
                                 <li class="contacts__item">
                                     <a href="mailto:info@devstudio.com" class="contacts__link">
@@ -57,7 +57,7 @@
                                     </a>
                                 </li>
                                 <li class="contacts__item">
-                                    <a href="tel:+380961111111" class="contacts__link">
+                                    <a href="tel:+380961111111" class="contacts__link phone">
                                         <svg class="header__icon phone">
                                             <use href="./images/icons/icons.svg#icon-smartphone">
                                             </use>
@@ -132,7 +132,7 @@
                 </ul>
             </div>
         </section>
-        <section class="">
+        <section class="section">
             <div class="conteiner works">
                 <h2 class="works__title">Чем мы занимаемся</h2>
                 <ul class="works__list">
