--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+        integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+        crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
@@ -49,7 +53,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <div>
+                    <div class="contacts">
                         <ul class="contacts__list">
                             <li class="contacts__item">
                                 <a href="mailto:info@devstudio.com" class="contacts__link">
@@ -85,7 +89,7 @@
                     <h1 class="visually-hidden">Наши работы</h1>
                     <ul class="filter">
                         <li class="filter__item">
-                            <button type="button" class="filter__btn"> Все </button>
+                            <button type="button" class="filter__btn curent-filter"> Все </button>
                         </li>
                         <li class="filter__item">
                             <button type="button" class="filter__btn"> Веб-сайты </button>
@@ -119,7 +123,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary1_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary1_1062.jpg 1062w
                                                 "
-                                            media="(min-width:678px)"
+                                            media="(min-width:768px)"
                                             sizes="45vw">
                                         <source
                                             srcset="
@@ -158,7 +162,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary2_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary2_1062.jpg 1062w
                                                 " 
-                                            media="(min-width:678px)" 
+                                            media="(min-width:768px)" 
                                             sizes="45vw">
                                         <source 
                                             srcset="
@@ -197,7 +201,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary3_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary3_1062.jpg 1062w
                                                 " 
-                                            media="(min-width:678px)" 
+                                            media="(min-width:768px)" 
                                             sizes="45vw">
                                         <source 
                                             srcset="
@@ -236,7 +240,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary4_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary4_1062.jpg 1062w
                                                 " 
-                                            media="(min-width:678px)" 
+                                            media="(min-width:768px)" 
                                             sizes="45vw">
                                         <source 
                                             srcset="
@@ -275,7 +279,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary5_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary5_1062.jpg 1062w
                                                 " 
-                                            media="(min-width:678px)" 
+                                            media="(min-width:768px)" 
                                             sizes="45vw">
                                         <source 
                                             srcset="
@@ -314,7 +318,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary6_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary6_1062.jpg 1062w
                                                 " 
-                                            media="(min-width:678px)" 
+                                            media="(min-width:768px)" 
                                             sizes="45vw">
                                         <source 
                                             srcset="
@@ -353,7 +357,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary7_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary7_1062.jpg 1062w
                                                 " 
-                                            media="(min-width:678px)" 
+                                            media="(min-width:768px)" 
                                             sizes="45vw">
                                         <source 
                                             srcset="
@@ -392,7 +396,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary8_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary8_1062.jpg 1062w
                                                 " 
-                                            media="(min-width:678px)" 
+                                            media="(min-width:768px)" 
                                             sizes="45vw">
                                         <source 
                                             srcset="
@@ -431,7 +435,7 @@
                                                 ./images/tablet/portfolio/gallary/tab_gallary9_708.jpg 708w,
                                                 ./images/tablet/portfolio/gallary/tab_gallary9_1062.jpg 1062w
                                                 " 
-                                            media="(min-width:678px)" 
+                                            media="(min-width:768px)" 
                                             sizes="45vw">
                                         <source 
                                             srcset="
