--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="works-section">
             <div class="conteiner works">
                 <h2 class="works__title">Чем мы занимаемся</h2>
                 <ul class="works__list">
