--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                     <li class="works__item">
                         <div class="works__wraper">
                             <img srcset="
-                                    ./images/desktop/studio/projects/project1_370.jpg 370w, 
-                                    ./images/desktop/studio/projects/project1_740.jpg 740w, 
-                                    ./images/desktop/studio/projects/project1_1110.jpg 1110w"
+                                    ./images/desktop/studio/projects/project1_370.jpg 1x, 
+                                    ./images/desktop/studio/projects/project1_740.jpg 2x, 
+                                    ./images/desktop/studio/projects/project1_1110.jpg 3x"
                                 sizes="370px" 
                                 src="./images/desktop/studio/projects/project1_370.jpg"
                                 alt="project1" 
@@ -152,9 +152,9 @@
                     <li class="works__item">
                         <div class="works__wraper">
                             <img srcset="
-                                    ./images/desktop/studio/projects/project2_370.jpg 370w, 
-                                    ./images/desktop/studio/projects/project2_740.jpg 740w, 
-                                    ./images/desktop/studio/projects/project2_1110.jpg 1110w"
+                                    ./images/desktop/studio/projects/project2_370.jpg 1x, 
+                                    ./images/desktop/studio/projects/project2_740.jpg 2x, 
+                                    ./images/desktop/studio/projects/project2_1110.jpg 3x"
                                 sizes="370px" 
                                 src="./images/desktop/studio/projects/project2_370.jpg" 
                                 alt="project2" 
@@ -165,9 +165,9 @@
                     <li class="works__item">
                         <div class="works__wraper">
                             <img srcset="
-                                    ./images/desktop/studio/projects/project3_370.jpg 370w, 
-                                    ./images/desktop/studio/projects/project3_740.jpg 740w, 
-                                    ./images/desktop/studio/projects/project3_1110.jpg 1110w"
+                                    ./images/desktop/studio/projects/project3_370.jpg 1x, 
+                                    ./images/desktop/studio/projects/project3_740.jpg 2x, 
+                                    ./images/desktop/studio/projects/project3_1110.jpg 3x"
                                 sizes="370px" 
                                 src="./images/desktop/studio/projects/project1_370.jpg" 
                                 alt="project3" 
@@ -186,26 +186,26 @@
                         <picture>
                             <source 
                                 srcset="
-                                    ./images/desktop/studio/team/desk_igor_270.jpg 270w,
-                                    ./images/desktop/studio/team/desk_igor_540.jpg 540w,
-                                    ./images/desktop/studio/team/desk_igor_810.jpg 810w
+                                    ./images/desktop/studio/team/desk_igor_270.jpg 1x,
+                                    ./images/desktop/studio/team/desk_igor_540.jpg 2x,
+                                    ./images/desktop/studio/team/desk_igor_810.jpg 3x
                                     "
                                 media="(min-width:1200px)"
                                 sizes="25vw">
                             <source 
                                 srcset="
-                                    ./images/tablet/studio/team/tab_igor_354.jpg 354w,
-                                    ./images/tablet/studio/team/tab_igor_708.jpg 708w,
-                                    ./images/tablet/studio/team/tab_igor_1062.jpg 1062w
+                                    ./images/tablet/studio/team/tab_igor_354.jpg 1x,
+                                    ./images/tablet/studio/team/tab_igor_708.jpg 2x,
+                                    ./images/tablet/studio/team/tab_igor_1062.jpg 3x
                                     " 
                                 media="(min-width:768px)" 
                                 sizes="45vw"
                             >
                             <source 
                                 srcset="
-                                    ./images/mobile/studio/team/mob_igor_450.jpg 450w,
-                                    ./images/mobile/studio/team/mob_igor_900.jpg 900w,
-                                    ./images/mobile/studio/team/mob_igor_1350.jpg 1350w
+                                    ./images/mobile/studio/team/mob_igor_450.jpg 1x,
+                                    ./images/mobile/studio/team/mob_igor_900.jpg 2x,
+                                    ./images/mobile/studio/team/mob_igor_1350.jpg 3x
                                     " 
                                 media="(max-width:767px)" 
                                 sizes="90vw">
@@ -250,25 +250,25 @@
                         <picture>
                             <source 
                                 srcset="
-                                    ./images/desktop/studio/team/desk_olga_270.jpg 270w,
-                                    ./images/desktop/studio/team/desk_olga_540.jpg 540w,
-                                    ./images/desktop/studio/team/desk_olga_810.jpg 810w
+                                    ./images/desktop/studio/team/desk_olga_270.jpg 1x,
+                                    ./images/desktop/studio/team/desk_olga_540.jpg 2x,
+                                    ./images/desktop/studio/team/desk_olga_810.jpg 3x
                                     " 
                                 media="(min-width:1200px)" 
                                 sizes="25vw">
                             <source 
                                 srcset="
-                                    ./images/tablet/studio/team/tab_olga_354.jpg 354w,
-                                    ./images/tablet/studio/team/tab_olga_708.jpg 708w,
-                                    ./images/tablet/studio/team/tab_olga_1062.jpg 1062w
+                                    ./images/tablet/studio/team/tab_olga_354.jpg 1x,
+                                    ./images/tablet/studio/team/tab_olga_708.jpg 2x,
+                                    ./images/tablet/studio/team/tab_olga_1062.jpg 3x
                                     " 
                                 media="(min-width:768px)"
                                 sizes="45vw">
                             <source 
                                 srcset="
-                                    ./images/mobile/studio/team/mob_olga_450.jpg 450w,
-                                    ./images/mobile/studio/team/mob_olga_900.jpg 900w,
-                                    ./images/mobile/studio/team/mob_olga_1350.jpg 1350w
+                                    ./images/mobile/studio/team/mob_olga_450.jpg 1x,
+                                    ./images/mobile/studio/team/mob_olga_900.jpg 2x,
+                                    ./images/mobile/studio/team/mob_olga_1350.jpg 3x
                                     " 
                                 media="(max-width:767px)"
                                 sizes="90vw">
@@ -313,25 +313,25 @@
                         <picture>
                             <source 
                                 srcset="
-                                    ./images/desktop/studio/team/desk_nukolay_270.jpg 270w,
-                                    ./images/desktop/studio/team/desk_nukolay_540.jpg 540w,
-                                    ./images/desktop/studio/team/desk_nukolay_810.jpg 810w
+                                    ./images/desktop/studio/team/desk_nukolay_270.jpg 1x,
+                                    ./images/desktop/studio/team/desk_nukolay_540.jpg 2x,
+                                    ./images/desktop/studio/team/desk_nukolay_810.jpg 3x
                                     " 
                                 media="(min-width:1200px)"
                                 sizes="25vw">
                             <source 
                                 srcset="
-                                    ./images/tablet/studio/team/tab_nukolay_354.jpg 354w,
-                                    ./images/tablet/studio/team/tab_nukolay_708.jpg 708w,
-                                    ./images/tablet/studio/team/tab_nukolay_1062.jpg 1062w
+                                    ./images/tablet/studio/team/tab_nukolay_354.jpg 1x,
+                                    ./images/tablet/studio/team/tab_nukolay_708.jpg 2x,
+                                    ./images/tablet/studio/team/tab_nukolay_1062.jpg 3x
                                     " 
                                 media="(min-width:768px)" 
                                 sizes="45vw">
                             <source 
                                 srcset="
-                                    ./images/mobile/studio/team/mob_nukolay_450.jpg 450w,
-                                    ./images/mobile/studio/team/mob_nukolay_900.jpg 900w,
-                                    ./images/mobile/studio/team/mob_nukolay_1350.jpg 1350w
+                                    ./images/mobile/studio/team/mob_nukolay_450.jpg 1x,
+                                    ./images/mobile/studio/team/mob_nukolay_900.jpg 2x,
+                                    ./images/mobile/studio/team/mob_nukolay_1350.jpg 3x
                                     " 
                                 media="(max-width:767px)" 
                                 sizes="90vw">
@@ -376,25 +376,25 @@
                         <picture>
                             <source 
                                 srcset="
-                                    ./images/desktop/studio/team/desk_muhail_270.jpg 270w,
-                                    ./images/desktop/studio/team/desk_muhail_540.jpg 540w,
-                                    ./images/desktop/studio/team/desk_muhail_810.jpg 810w
+                                    ./images/desktop/studio/team/desk_muhail_270.jpg 1x,
+                                    ./images/desktop/studio/team/desk_muhail_540.jpg 2x,
+                                    ./images/desktop/studio/team/desk_muhail_810.jpg 3x
                                     " 
                                 media="(min-width:1200px)"
                                 sizes="25vw">
                             <source 
                                 srcset="
-                                    ./images/tablet/studio/team/tab_muhail_354.jpg 354w,
-                                    ./images/tablet/studio/team/tab_muhail_708.jpg 708w,
-                                    ./images/tablet/studio/team/tab_muhail_1062.jpg 1062w
+                                    ./images/tablet/studio/team/tab_muhail_354.jpg 1x,
+                                    ./images/tablet/studio/team/tab_muhail_708.jpg 2x,
+                                    ./images/tablet/studio/team/tab_muhail_1062.jpg 3x
                                     " 
                                 media="(min-width:768px)" 
                                 sizes="45vw">
                             <source 
                                 srcset="
-                                    ./images/mobile/studio/team/mob_muhail_450.jpg 450w,
-                                    ./images/mobile/studio/team/mob_muhail_900.jpg 900w,
-                                    ./images/mobile/studio/team/mob_muhail_1350.jpg 1350w
+                                    ./images/mobile/studio/team/mob_muhail_450.jpg 1x,
+                                    ./images/mobile/studio/team/mob_muhail_900.jpg 2x,
+                                    ./images/mobile/studio/team/mob_muhail_1350.jpg 3x
                                     " 
                                 media="(max-width:767px)" 
                                 sizes="90vw">
