--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
                                 sizes="370px" 
                                 src="./images/desktop/studio/projects/project1_370.jpg"
                                 alt="project1" 
-                                />
+                                media="(min-width:1200px)"
+                                >
                             <p class="works__description">Десктопные приложения</p>
                         </div>
                     </li>
@@ -158,7 +159,7 @@
                                 sizes="370px" 
                                 src="./images/desktop/studio/projects/project2_370.jpg" 
                                 alt="project2" 
-                                />
+                                >
                             <p class="works__description">Мобильные приложения</p>
                         </div>
                     </li>
