--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
                                     ./images/desktop/studio/team/desk_igor_540.jpg 2x,
                                     ./images/desktop/studio/team/desk_igor_810.jpg 3x
                                     "
-                                media="(min-width:1200px)"
-                            >
+                                media="(min-width:1200px)">
                             <source 
                                 srcset="
                                     ./images/tablet/studio/team/tab_igor_354.jpg 1x,
