--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-        <modal class="modal">
+        <div class="modal">
             <button class="modal__button" data-modal-close>
                 <svg class="modal__icon">
                     <use href="./images/icons/icons.svg#icon-cros"></use>
@@ -607,7 +607,7 @@
                 </label>
                 <button type="submit" class="form__btn">Отправить</button>
             </form>
-        </modal>
+        </div>
     </div>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
